# PFA

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
.files/578cbc5a-94dd-4f15-9618-983af0497e95/: 9e850cf3-2c31-4018-a568-74e6e4d1319e.txt
.files/dd101b7b-1880-40b1-92a4-ec09ca27f772/: b35ebac7-f917-4a7a-8168-0df46aa0c573.txt
docs/: DESCRIPTION.md  MARKETS.md
mics/: commands.txt
src/: agent_prompts.py  config.py  crypto.py  function_tools.py  pfa.py  user.py  user_info.py
src/data/: Binance_ETHUSDT_d.csv
src/prompts/: agent_prompts.py
src/tools/: crypto.py  function_tools.py
