[project]
name = "personal-finance-assistant"
version = "0.1.0"
description = "A personal finance assistant to help manage expenses and budgets."
authors = [{ name = "Zohaib", email = "zohaib10092001@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.3"
dependencies = [
    "openai",
    "plotly",
    "chainlit",
    "openai-agents",
    "pydantic",
    "web3",
    "pandas",
]

[project.urls]
HomePage = "https://github.com/mzurs/PFA"
Repository = "https://github.com/mzurs/PFA"
