[project]
name = "personal-finance-assistant"
version = "0.1.0"
description = "A personal finance assistant to help manage expenses and budgets."
authors = [{ name = "Zohaib", email = "zohaib10092001@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.3"
dependencies = [
    "openai",
    "plotly",
    "chainlit",
    "openai-agents",
    "pydantic",
    "web3",
    "pandas",
    "numpy>=2.3.0",
]


[project.urls]
HomePage = "https://github.com/mzurs/PFA"
Repository = "https://github.com/mzurs/PFA"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
